--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,11 @@ html {
 body {
     background-color: var(--primary-color);
     color: var(--primary-text-color);
-
     font-family: Roboto, sans-serif;
+    width: 1600px;
     line-height: 1.2;
 }
+
 
 ul {
     margin: 0;
@@ -35,35 +36,62 @@ p {
     padding: 0; 
 }
 
-/* logo */
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+/* Header */
+.page-header {
+    border-bottom: 1px solid #ECECEC;
+}
+
 .header-logo {
+    padding-top: 24px;
+    padding-bottom: 24px;
+
     color:#000000;
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 26px;
     text-decoration: none;
 }
-
 span {
     color:var(--accent-color);
 }
-/* Header */
-.page-header {
-    outline: auto tomato;
-}
+
 /* Site nav */
+.nav {
+    display: flex;
+    align-items: center;
+}
+
 .site-nav {
     display: flex;
-    margin-top: 0;
-    margin-bottom: 0;
-    list-style: none;
-    font-weight: 500;
-    font-size: 14px;
+    margin-left: 93px;
 }
 
 .site-nav .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     color:var(--tittle-text-color);
-    text-decoration: none;    
+    list-style: none;
+    font-weight: 500;
+    font-size: 14px;
+    text-decoration: none;  
+}
+
+.site-nav .item + .item {
+    margin-left: 50px;
 }
 
 .site-nav .link:hover,
@@ -73,15 +101,22 @@ span {
 
 /* Header Contact */
 .header-list {
-    margin-top: 0;
-    margin-bottom: 0;
-    list-style: none;
+    display: flex;
+    margin-left: auto;
+}
+.header-list .item + .item {
+    margin-left: 50px;
 }
 
 .header-contact {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    
     color:var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
+    list-style: none;
 }
 
 .header-contact:hover,
@@ -91,18 +126,22 @@ span {
 
 /* Hero */
 .hero {
-margin-top: 0;
-margin-bottom: 0;
-background-color: #2F303A;
-text-align: center;
-outline: auto tomato;
+    display: block;
+    padding-top: 200px;
+    background-color: #2F303A;
+    text-align: center;
 }
-
 .hero-tittle {
-    margin-top: 0;
-    margin-bottom: 30px;
     color: var(--primary-color);
     font-weight: 900;
+    font-size: 44px;
+    line-height:1.4;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+.subtittle {
+    display: block;
+    color: var(--primary-color);
     font-size: 44px;
     line-height:1.4;
 }
@@ -120,8 +159,21 @@ outline: auto tomato;
     line-height: 1.8;
     text-align: center;
     cursor: pointer;
+    margin-bottom: 200px;
 }
 /* Filter Portfolio*/
+
+.btn-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 56px;
+}
+
+
+.btn-list .btn-item + .btn-item {
+    margin-left: 8px;
+}
 .filter-button {
     border-radius: 4px;
     border: none;
@@ -143,28 +195,56 @@ outline: auto tomato;
     background-color: var(--accent-color);
     color:var(--primary-color);
 }
-/*  Exaple Portfolio */
+/*  Exaples Portfolio */
+
+.tittle {
+    display: none;
+}
+.portfolio {
+    width: 1200px;
+}
+.portfolio-works {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.portfolio-element {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #F5F4FA;
+}
 .portfolio-tittle {
     color: var(--tittle-text-color);
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
 }
-
+.portfolio-element:nth-child(3d) {
+    margin-right: 0;
+}
+.portfolio-element:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
 .portfolio-text {
     font-size: 16px;
     line-height: 1.8;
 }
-/* Container */
-.container {
-    text-align: center;
-    width: 1200px;
-    outline: auto tomato;
-    padding: 0 215px;
-    margin: auto;
-}
+
 
 /* Advantages */
+.advantages-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 94px;
+}
+.advantages-item {
+    width: 270px;
+    margin-right: 30px;
+}
+.advantages-item:last-child {
+    margin-right: 0;
+}
 
 .advantages-tittle {
     color: var(--tittle-text-color);
@@ -177,22 +257,46 @@ outline: auto tomato;
     line-height: 1.7;
 }
 /* Works*/
+.works-list {
+    display: flex;
+}
+
+.works-item {
+    margin-right: 30px;
+}
+.works-item:last-child {
+    margin-right: 0;
+}
 .works-tittle {
-    margin-top: 94px;
     margin-bottom: 50px;
     color: var(--tittle-text-color);
     font-weight: 700;
     font-size: 36px;
+    text-align: center;
 }
 
 /* Team */
 .team {
+    width: 100%;
     background-color: #F5F4FA;
 }
 .team-tittle {
     color: var(--tittle-text-color);
     font-weight: 700;
     font-size: 36px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.team-list {
+    display: flex;
+}
+.team-item {
+    width: 270px;
+    margin-right: 30px;
+    text-align: center;
+}
+.team-item:last-child {
+    margin-right: 0;
 }
 .card-tittle {
     color: var(--tittle-text-color);
@@ -204,7 +308,14 @@ outline: auto tomato;
     font-size: 16px;
 }
 /* Footer */
+.container footer {
+    display: flex;
+    flex-direction: column;
+}
 .footer-logo {
+    display: block;
+    padding-top: 60px;
+    margin-bottom: 20px;
     color: var(--primary-color);
     font-family: Raleway, sans-serif;
     text-decoration: none;
@@ -215,6 +326,8 @@ outline: auto tomato;
     background-color:#2F303A;
 }
 .address {
+    display: block;
+    margin-bottom: 9px;
     color:var(--primary-color);
     font-style: normal;
     font-size: 14px;
@@ -222,6 +335,11 @@ outline: auto tomato;
 }
 /* Footer contact */
 .footer-list {
+    padding-bottom: 60px;
+}
+
+.footer-list li {
+    margin-bottom: 9px;
     list-style: none;
 }
 
