--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-html {
+*{
     box-sizing: border-box;
 }
 
@@ -13,7 +13,6 @@ body {
     background-color: var(--primary-color);
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
-    width: 1600px;
     line-height: 1.2;
 }
 
@@ -42,10 +41,10 @@ p {
 }
 
 .container {
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin: 0 auto;
 }
 
 /* Header */
@@ -83,7 +82,7 @@ span {
     padding-top: 32px;
     padding-bottom: 32px;
 
-    color:var(--tittle-text-color);
+    color: var(--tittle-text-color);
     list-style: none;
     font-weight: 500;
     font-size: 14px;
@@ -112,7 +111,6 @@ span {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    
     color:var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -126,10 +124,15 @@ span {
 
 /* Hero */
 .hero {
-    display: block;
-    padding-top: 200px;
+    height: 600px;
     background-color: #2F303A;
-    text-align: center;
+    padding: 0;
+}
+.container-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 200px 0;
 }
 .hero-tittle {
     color: var(--primary-color);
@@ -138,6 +141,7 @@ span {
     line-height:1.4;
     text-transform: uppercase;
     margin-bottom: 30px;
+    text-align: center;
 }
 .subtittle {
     display: block;
@@ -159,7 +163,6 @@ span {
     line-height: 1.8;
     text-align: center;
     cursor: pointer;
-    margin-bottom: 200px;
 }
 /* Filter Portfolio*/
 
@@ -236,7 +239,9 @@ span {
 .advantages-list {
     display: flex;
     justify-content: center;
-    margin-top: 94px;
+}
+.advantages {
+    padding-bottom: 0;
 }
 .advantages-item {
     width: 270px;
