--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ span {
     background-color: var(--accent-color);
     color:var(--primary-color);
 }
-/*  Exaples Portfolio */
+/* Portfolio */
 
 .tittle {
     display: none;
@@ -211,11 +211,21 @@ span {
     flex-wrap: wrap;
 }
 
+.text-content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 24px;
+    border: 1px solid #F5F4FA;
+    border-top: 0;
+}
+
 .portfolio-element {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    border-bottom: 1px solid #F5F4FA;
 }
 .portfolio-tittle {
     color: var(--tittle-text-color);
@@ -296,9 +306,15 @@ span {
     display: flex;
 }
 .team-item {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
     width: 270px;
     margin-right: 30px;
     text-align: center;
+    box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.5);
+    border-radius: 0 0 7px 7px;
+    border-top: 0;
 }
 .team-item:last-child {
     margin-right: 0;
@@ -308,24 +324,34 @@ span {
     font-weight: 500;
     font-size: 16px;
 }
-
+.team-text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding:30px 0;
+    gap: 10px;
+    background-color: #FFFFFF;
+   
+}
 .card-text {
     font-size: 16px;
 }
 /* Footer */
-.container footer {
+.footer-container {
     display: flex;
+    width: 1200px;
     flex-direction: column;
+    padding: 60px 0;
+    margin: 0 auto;
 }
 .footer-logo {
     display: block;
-    padding-top: 60px;
-    margin-bottom: 20px;
     color: var(--primary-color);
     font-family: Raleway, sans-serif;
     text-decoration: none;
     font-weight: 700;
     font-size: 26px;
+    margin-bottom: 20px;
 }
 .footer {
     background-color:#2F303A;
@@ -339,10 +365,6 @@ span {
     line-height: 1.7;
 }
 /* Footer contact */
-.footer-list {
-    padding-bottom: 60px;
-}
-
 .footer-list li {
     margin-bottom: 9px;
     list-style: none;
