--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ span {
     padding: 10px 32px;
     min-width: 216px;
     background-color: var(--accent-color);
-    color: #FFFFFF;
+    color: var(--primary-color);
 
     font-weight: 700;
     font-size: 16px;
@@ -330,7 +330,7 @@ span {
     text-align: center;
     padding:30px 0;
     gap: 10px;
-    background-color: #FFFFFF;
+    background-color: var(--primary-color);
    
 }
 .card-text {
