--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,9 @@ span {
     padding-bottom: 0;
 }
 .advantages-item {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     width: 270px;
     margin-right: 30px;
 }
